--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.19.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/node": "^25.0.6",
+    "@types/pg": "^8.16.0",
+    "prisma": "^6.19.1",
     "typescript": "^5.9.3"
   }
 }
