feature(r2-integration): integrate r2 (s3 compatible) object storage service

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.971.0",
     "@prisma/client": "^6.19.1",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
